--- a/main/templates/recommendation_list.html
+++ b/main/templates/recommendation_list.html
@@ -69,7 +69,7 @@
             <div class="product-grid">
                 {% if recommendations %}
                     {% for item in recommendations %}
-                        {% include 'product_card.html'%}
+                        {% include 'product_card.html' with item=item source='recommendations' %}
                     {% endfor %}
                 {% else %}
                     <div class="no-results">
